--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   background: white;
   border-radius: 16px;
   padding: 20px;
-  width: 360px;
+  width: 500px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   transition: background 0.3s, color 0.3s, box-shadow 0.3s;
 }
@@ -250,4 +250,18 @@ body.dark-mode #addBtn {
 }
 input, button, .container, #filter, li {
   transition: background-color 0.3s, color 0.3s;
+}
+
+.task-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.task-info small {
+  font-size: 12px;
+  color: #666;
+}
+
+body.dark .task-info small {
+  color: #bbb;
 }
